# sessionbus

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
examples/: run_server.py
src/sessionbus/: __init__.py  client.py  connection.py  outbox_backend.py  pool.py  server.py  types.py
src/sessionbus/backends/: __init__.py  postgres.py
tests/: __init__.py  test_connection.py  test_integration.py  test_pool.py
